--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -6,7 +6,7 @@ app_hits:
     resource: "@AppBundle/Resources/config/routing/hit.yml"
     prefix: /hit
 
-app_dictionary:
+app_node:
     resource: "@AppBundle/Resources/config/routing/node.yml"
     prefix: /node
 
@@ -22,7 +22,7 @@ app_dictionary:
     resource: "@AppBundle/Resources/config/routing/dictionary.yml"
     prefix: /dictionary
 
-app_default:
+default_index:
     path: /
     defaults: { _controller: "AppBundle:Default:index"}
     methods:  GET
