--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -22,6 +22,11 @@ app_dictionary:
     resource: "@AppBundle/Resources/config/routing/dictionary.yml"
     prefix: /dictionary
 
+security_login:
+    path: /security/login
+    defaults: { _controller: "AppBundle:Security:login"}
+    methods:  GET
+
 default_index:
     path: /
     defaults: { _controller: "AppBundle:Default:index"}
