--- a/src/AppBundle/Resources/config/routing/dictionary.yml
+++ b/src/AppBundle/Resources/config/routing/dictionary.yml
@@ -2,6 +2,10 @@ list_nodes:
     path:     /initial/{letter}/{page}
     defaults: { _controller: AppBundle:Dictionary:list_nodes, page: 1 }
 
+list_bysymbol_nodes:
+    path:     /symbol/{page}
+    defaults: { _controller: AppBundle:Dictionary:list_bysymbol_nodes, page: 1 }
+
 single_node:
     path:     /{slug}
     defaults: { _controller: AppBundle:Dictionary:single_node }
