ampliata l'entity Definition

--- a/src/AppBundle/Resources/config/doctrine/Definition.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Definition.orm.yml
@@ -30,6 +30,13 @@ AppBundle\Entity\Definition:
             length: null
             options:
                 fixed: false
+        extraInfo:
+            type: text
+            nullable: false
+            length: null
+            options:
+                fixed: false
+            column: extra_info
         status:
             type: boolean
             nullable: false
