aggiunta la ricerca

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,6 +38,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        fulltextSearch: "@app.fulltextsearch"
 
 # Doctrine Configuration
 doctrine:
