--- a/src/AppBundle/Resources/config/doctrine/Hit.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Hit.orm.yml
@@ -24,9 +24,9 @@ AppBundle\Entity\Hit:
                 default: CURRENT_TIMESTAMP
             column: visit_time
         referingUrl:
-            type: string
-            nullable: true
-            length: 100
+            type: text
+            nullable: false
+            length: null
             options:
                 fixed: false
             column: refering_url
@@ -38,9 +38,9 @@ AppBundle\Entity\Hit:
                 fixed: false
             column: hit_remote_addr
         hitUserAgent:
-            type: string
-            nullable: true
-            length: 100
+            type: text
+            nullable: false
+            length: null
             options:
                 fixed: false
             column: hit_user_agent
