--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,5 @@
 app:
     resource: "@AppBundle/Resources/config/routing.yml"
     prefix: /
+captcha_routing:
+  resource: "@CaptchaBundle/Resources/config/routing.yml"
