--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "twig/twig": "^1.0||^2.0",
         "knplabs/knp-paginator-bundle": "^2.5",
-        "beberlei/DoctrineExtensions": "^1.0"
+        "beberlei/DoctrineExtensions": "^1.0",
+        "captcha-com/symfony-captcha-bundle": "4.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
