--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,13 @@
         "twig/twig": "^1.0||^2.0",
         "knplabs/knp-paginator-bundle": "^2.5",
         "beberlei/DoctrineExtensions": "^1.0",
-        "captcha-com/symfony-captcha-bundle": "4.*"
+        "captcha-com/symfony-captcha-bundle": "4.*",
+        "twig/extensions": "^1.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^3.0",
+        "doctrine/doctrine-fixtures-bundle": "^2.3.0"
     },
     "scripts": {
         "symfony-scripts": [
