--- a/src/AppBundle/Resources/config/routing/page.yml
+++ b/src/AppBundle/Resources/config/routing/page.yml
@@ -1,3 +1,7 @@
 page_manifesto:
     path:     /manifesto
     defaults: { _controller: "AppBundle:Page:manifesto" }
+
+page_privacypolicy:
+    path:     /manifesto
+    defaults: { _controller: "AppBundle:Page:privacy_policy" }
