--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "twig/twig": "^1.0||^2.0",
         "knplabs/knp-paginator-bundle": "^2.5",
         "beberlei/DoctrineExtensions": "^1.0",
-        "twig/extensions": "^1.4"
+        "twig/extensions": "^1.4",
+        "presta/sitemap-bundle": "^1.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
