--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,8 +40,8 @@ twig:
     strict_variables: "%kernel.debug%"
     globals:
         fulltextSearch: "@app.fulltextsearch"
-    form:
-        resources: ['bootstrap_3_layout.html.twig']
+    form_themes:
+        - 'bootstrap_3_layout.html.twig'
 # Doctrine Configuration
 doctrine:
     dbal:
