--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "knplabs/knp-paginator-bundle": "^2.5",
         "beberlei/DoctrineExtensions": "^1.0",
         "twig/extensions": "^1.4",
-        "presta/sitemap-bundle": "^1.5"
+        "presta/sitemap-bundle": "^1.5",
+        "stfalcon/tinymce-bundle": "2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
