--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -26,6 +26,10 @@ app_dictionary:
     resource: "@AppBundle/Resources/config/routing/dictionary.yml"
     prefix: /dictionary
 
+app_backend:
+    resource: "@AppBundle/Resources/config/routing/backend.yml"
+    prefix: /backend
+
 security_login:
     path: /security/login
     defaults: { _controller: "AppBundle:Security:login"}
@@ -34,5 +38,4 @@ default_index:
     path: /
     defaults: { _controller: "AppBundle:Default:index"}
     methods:  GET
-
 
