--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -34,6 +34,9 @@ security_login:
     path: /security/login
     defaults: { _controller: "AppBundle:Security:login"}
 
+logout:
+    path: /security/logout
+
 default_index:
     path: /
     defaults: { _controller: "AppBundle:Default:index"}
