--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "beberlei/DoctrineExtensions": "^1.0",
         "twig/extensions": "^1.4",
         "presta/sitemap-bundle": "^1.5",
-        "stfalcon/tinymce-bundle": "2.0"
+        "stfalcon/tinymce-bundle": "2.0",
+        "cocur/slugify": "^2.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
