--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -21,3 +21,5 @@ parameters:
         -
             dsn: 127.0.0.1
             port: 11211
+    recaptcha_sitekey: enter_your_sitekey_from_google
+    recaptcha_secret: enter_your_secret_from_google
