--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "twig/extensions": "^1.4",
         "presta/sitemap-bundle": "^1.5",
         "stfalcon/tinymce-bundle": "2.0",
-        "cocur/slugify": "^2.4"
+        "cocur/slugify": "^2.4",
+        "anysrv/recaptcha-bundle": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
