--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -6,7 +6,7 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    locale: it
 
 framework:
     #esi:             ~
@@ -18,7 +18,7 @@ framework:
     form:            ~
     csrf_protection: ~
     validation:      { enable_annotations: true }
-    #serializer:      { enable_annotations: true }
+    serializer:      { enable_annotations: true }
     templating:
         engines: ['twig']
     default_locale:  "%locale%"
@@ -95,6 +95,11 @@ doctrine_cache:
         presta_sitemap:
             type: memcached
             namespace: presta_sitemap
+
 anysrv_recaptcha:
     sitekey: "%recaptcha_sitekey%"
     secret: "%recaptcha_secret%"
+
+coop_tilleuls_forgot_password:
+    password_token_class: 'AppBundle\Entity\PasswordToken'
+    user_class:           'AppBundle\Entity\User'
