--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "stfalcon/tinymce-bundle": "2.0",
         "cocur/slugify": "^2.4",
         "anysrv/recaptcha-bundle": "^1.0",
-        "tilleuls/forgot-password-bundle": "^1.0"
+        "tilleuls/forgot-password-bundle": "^1.0",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
